# SETU-AAROGYA-DRISHTI

./: -w  .env.example  .gitignore  ARGUS_Ideation.md  INSTRUCTIONS_TO_RUN.md  README.md  docker-compose.yml  pyrightconfig.json
backend/: Dockerfile  README.md  __init__.py  pyproject.toml
backend/app/: bus.py  dev.py  intelligence.py  llm.py  main.py  settings.py  storage.py  topics.py
backend/app/schemas/: __init__.py  core.py  health.py
backend/app/setu/: __init__.py  api.py  arcade_store.py  exporters.py  seeds.py  store.py
backend/tests/: test_bus.py  test_health_schemas.py  test_intelligence.py  test_schemas.py  test_setu_api.py  test_setu_arcade_store.py  test_setu_exporters.py
docs/: architecture.md  data-model.md  setu-architecture.md  setu-data-model.md  setu-demo-runbook.md
frontend/: .dockerignore  Dockerfile  README.md  components.json  next.config.mjs  package-lock.json  package.json  tsconfig.json
infrastructure/: README.md
infrastructure/arcadedb/: README.md
infrastructure/llm/: README.md
infrastructure/observability/: README.md
infrastructure/redpanda/: README.md
scripts/: preflight.ps1  preflight.sh  seed_setu_demo.py
workers/: README.md
workers/enrichment/: Dockerfile  pyproject.toml
workers/enrichment/app/: brain.py  entity_resolution.py  main.py
workers/enrichment/tests/: test_brain.py  test_entity_resolution.py
workers/ingestion/: Dockerfile  pyproject.toml
workers/ingestion/app/: __init__.py  conductor.py  main.py
workers/ingestion/app/plugins/: __init__.py  web_extraction.py
workers/ingestion/app/processors/: __init__.py  quantitative.py
workers/ingestion/app/setu/: __init__.py  backoff.py  base.py  reddit_praw.py  registry.py  rss_feeds.py  telegram_public.py  web_forum.py  x_replay_fixture.py  youtube_comments.py
workers/ingestion/tests/: test_backoff.py  test_conductor.py  test_quantitative_processor.py  test_setu_connectors.py  test_web_extraction.py
workers/normalizer/: Dockerfile  __init__.py  pyproject.toml
workers/normalizer/app/: __init__.py  gate.py  lang_id.py  main.py  medical_ner.py  misinfo.py  pii.py  pipeline.py  sentiment.py  translate.py
workers/normalizer/tests/: __init__.py  test_gate.py  test_pii.py  test_pipeline.py
workers/signals/: Dockerfile  __init__.py  pyproject.toml
workers/signals/app/: __init__.py  adr.py  aggregator.py  audit.py  cluster.py  dp.py  main.py  trend.py
workers/signals/tests/: test_adr.py  test_aggregator.py  test_audit.py  test_cluster.py  test_dp.py  test_main_flush.py  test_trend.py
(+82 files in other folders)
