[project]
name = "localized-osint-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "aiokafka>=0.10.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"
