[project]
name = "localized-osint-enrichment-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "aiokafka>=0.10.0",
  "httpx>=0.27.0",
  "langgraph>=1.0.0",
  "numpy>=1.26.0",
  "orjson>=3.10.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "rapidfuzz>=3.10.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]
embeddings = [
  "fastembed>=0.4.0"
]
