[project]
name = "localized-osint-ingestion-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "aiokafka>=0.10.0",
  "crawl4ai>=0.8.0",
  "httpx>=0.28.0",
  "ijson>=3.3.0",
  "orjson>=3.10.0",
  "polars>=1.35.0",
  "psutil>=7.0.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0"
]

[project.scripts]
osint-quantitative-processor = "app.processors.quantitative:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]
