[project]
name = "setu-normalizer-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "aiokafka>=0.10.0",
  "httpx>=0.27.0",
  "orjson>=3.10.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]
# Heavy Indic NLP models — only installed when running with HF backends.
indic = [
  "transformers>=4.44.0",
  "torch>=2.3.0",
  "sentencepiece>=0.2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
