[project]
name = "setu-signals-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "aiokafka>=0.10.0",
  "blake3>=0.4.1",
  "httpx>=0.27.0",
  "orjson>=3.10.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
